player list mobile fix. Overflow-wrap: break-word CSS property added

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -336,7 +336,8 @@ h2 {
   }
 
   .player-email {
-    max-width: 5%;
+    max-width: 250px;
+    overflow-wrap: break-word;
   }
 
 }
